# pyflyde

./: .gitignore  .readthedocs.yaml  HelloPy.flyde  LICENSE  Makefile  README.md  flyde.py  mkdocs.yml  package.json  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
docs/: api.rst  conf.py  index.md  index.rst  quickstart.md  quickstart.rst  reference.md  requirements.txt  usage.md  usage.rst
docs/package/: flyde.flow.md  flyde.io.md  flyde.node.md
examples/: .flyde-nodes.json  Clustering.flyde  HelloPy.flyde  flyde-nodes.json  pyproject.toml
examples/mylib/: components.flyde.ts  components.py  dataframe.flyde.ts  dataframe.py  kmeans.flyde.ts  kmeans.py
flyde/: cli.py  cli.pyi  connection.py  flow.py  flow.pyi  io.py  io.pyi  node.py  node.pyi  nodes.py  pins.py  stdlib.py  stdlib.pyi
mylib/: Concat.flyde.ts  Print.flyde.ts  components.flyde.ts  components.py
tests/: .flyde-nodes.json  Repeat3Times.flyde  TestCustomLoad.flyde  TestFanIn.flyde  TestFanInGraph.flyde  TestFlow.flyde  TestInOutFlow.flyde  TestIsolatedFlow.flyde  TestNestedFlow.flyde  TestStdlib.flyde  components.flyde.ts  components.py  flyde-nodes.json  test_cli.py  test_flow.py  test_io.py  test_node.py  test_stdlib.py
