[project]
name = "pyflyde"
version = "0.0.2"
requires-python = ">= 3.9"
authors = [
    {name = "Vladimir Sibirov"}
]
description="Python SDK and runtime for Flyde - a visual flow-based programming language and IDE."
readme="README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
license = { file = "LICENSE" }

dependencies = [
    "pyyaml",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["flyde", "examples/mylib"]

[project.optional-dependencies]
dev = [
    "build",
    "black",
    "coverage",
    "flake8",
    "twine",
]
