[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflyde"
version = "0.1.0"
requires-python = ">= 3.9"
authors = [{ name = "Vladimir Sibirov" }]
description = "Python SDK and runtime for Flyde - a visual flow-based programming language and IDE."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
license = "Apache-2.0"

dependencies = ["pyyaml"]

[project.scripts]
pyflyde = "flyde.cli:main"

[tool.setuptools]
# package-dir = { "" = "flyde" }
packages = ["flyde"]

[tool.setuptools.package-data]
flyde = ["py.typed"]

[project.optional-dependencies]
dev = [
    "setuptools",
    "build",
    "coverage",
    "ruff",
    "mypy",
    "twine",
    "mkdocs",
    "icecream",
]
